--- a/sdi1920-605-lab-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/fragments/nav.html
@@ -14,6 +14,8 @@
 				<li class="active"><a href="/mark/list">Ver Notas</a></li>
 				<li><a href="/mark/add">Agregar Nota</a></li>
 				<li><a href="/mark/filter">Filtrar</a></li>
+				<li class="active"><a href="/teacher/list">Ver Profesores</a></li>
+				<li><a href="/teacher/add">Agregar Profesor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/signup"> <span
