--- a/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
@@ -5,20 +5,20 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container" style="text-align: center">
 		<h2 th:text="#{welcome.message}"></h2>
-		<h3>Esta es una zona privada la web</h3>
-		<p>
+		<h3 th:text="#{zonaPrivada}">Esta es una zona privada la web</h3>
+		<p th:text="#{usuarioAutenticadoComo}">
 			Usuario Autenticado como : <b th:inline="text">
 				[[${#httpServletRequest.remoteUser}]] </b>
 		</p>
 	</div>
-	<p>Notas del usuario</p>
+	<p th:text="#{notas}">Notas del usuario</p>
 	<div class="table-responsive">
 		<table class="table table-hover">
 			<thead>
 				<tr>
 					<th class="col-md-1">id</th>
-					<th>Descripción</th>
-					<th>Puntuación</th>
+					<th th:text="#{notas}">Descripción</th>
+					<th th:text="#{puntuacion}">Puntuación</th>
 					<th class="col-md-1"></th>
 					<th class="col-md-1"></th>
 					<th class="col-md-1"></th>
@@ -29,9 +29,9 @@
 					<td th:text="${mark.id}">1</td>
 					<td th:text="${mark.description}">Ejercicio 1</td>
 					<td th:text="${mark.score}">10</td>
-					<td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-					<td><a th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
-					<td><a th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
+					<td><a th:href="${'/mark/details/' + mark.id}" th:text="#{detalles}">detalles</a></td>
+					<td><a th:href="${'/mark/edit/' + mark.id}" th:text="#{modificar}">modificar</a></td>
+					<td><a th:href="${'/mark/delete/' + mark.id}" th:text="#{eliminar}">eliminar</a></td>
 				</tr>
 			</tbody>
 		</table>
