--- a/sdi1920-605-lab-spring/src/main/resources/templates/mark/list.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/mark/list.html
@@ -9,10 +9,10 @@
 
 
 	<div class="container">
-		<h2>Notas</h2>
-		<p>Las notas que actualmente figuran en el sistema son las
+		<h2 th:text="#{notas}">Notas</h2>
+		<p th:text="#{listadoNotasSubTexto}">Las notas que actualmente figuran en el sistema son las
 			siguientes:</p>
-		<button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
+		<button type="button" id="updateButton" class="btn btn-default" th:text="#{actualizar}">Actualizar</button>
 		<script>
 			$("#updateButton").click(function() {
 				$("#tableMarks").load('/mark/list/update');
@@ -24,8 +24,8 @@
 				<thead>
 					<tr>
 						<th class="col-md-1">id</th>
-						<th>Descripción</th>
-						<th>Puntuación</th>
+						<th th:text="#{descripcion}">Descripción</th>
+						<th th:text="#{puntuacion}">Puntuación</th>
 						<th class="col-md-1"></th>
 						<th class="col-md-1"></th>
 						<th class="col-md-1"></th>
@@ -36,9 +36,9 @@
 						<td th:text="${mark.id}">1</td>
 						<td th:text="${mark.description}">Ejercicio 1</td>
 						<td th:text="${mark.score}">10</td>
-						<td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-						<td><a th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
-						<td><a th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
+						<td><a th:href="${'/mark/details/' + mark.id}" th:text="#{detalles}">detalles</a></td>
+						<td><a th:href="${'/mark/edit/' + mark.id}" th:text="#{modificar}">modificar</a></td>
+						<td><a th:href="${'/mark/delete/' + mark.id}" th:text="#{eliminar}">eliminar</a></td>
 					</tr>
 				</tbody>
 			</table>
