--- a/sdi1920-605-lab-spring/src/main/resources/templates/teacher/add.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/teacher/add.html
@@ -7,29 +7,29 @@
 <nav th:replace="fragments/nav" />
 
 <div class="container">
-  <h2>Agregar Profesor</h2>
+  <h2 th:text="#{agregarProfesor}">Agregar Profesor</h2>
   <form class="form-horizontal" method="post" action="/teacher/add">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="description">Nombre:</label>
+      <label class="control-label col-sm-2" for="description" th:text="#{nombre}">Nombre:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" name="name" placeholder="Ejemplo Ejercicio 1" required="true" />
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="description">Apellidos:</label>
+      <label class="control-label col-sm-2" for="description" th:text="#{apellidos}">Apellidos:</label>
       <div class="col-sm-10">          
         <input type="text" class="form-control" name="surname" placeholder="Enetre 0 y 10" required="true" />
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="description">Categoria:</label>
+      <label class="control-label col-sm-2" for="description" th:text="#{categoria}">Categoria:</label>
       <div class="col-sm-10">          
         <input type="text" class="form-control" name="category" placeholder="Enetre 0 y 10" required="true" />
       </div>
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn btn-primary" th:text="#{enviar}">Enviar</button>
       </div>
     </div>
   </form>
