--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/add.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/add.html
@@ -5,7 +5,7 @@
 	<!-- Barra de Navegación superior -->
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<h2>Agregar usuario</h2>
+		<h2 th:text="#{agregarUsuario}">Agregar usuario</h2>
 		<form class="form-horizontal" method="post" action="/user/add">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="dni">DNI:</label>
@@ -15,14 +15,14 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="name">Nombre:</label>
+				<label class="control-label col-sm-2" for="name" th:text="#{nombre}">Nombre:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="name"
 						placeholder="Ejemplo: Juan" required="true" />
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="lastName">Apellidos:</label>
+				<label class="control-label col-sm-2" for="lastName" th:text="#{apellidos}">Apellidos:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="lastName"
 						placeholder="Ejemplo: Peréz Almonte" required="true" />
@@ -30,7 +30,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Enviar</button>
+					<button type="submit" class="btn btn-primary" th:text="#{enviar}">Enviar</button>
 				</div>
 			</div>
 		</form>
