--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/details.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/details.html
@@ -7,17 +7,17 @@
 	<nav th:replace="fragments/nav" />
 
 	<div class="container">
-		<h2>Detalles de la nota</h2>
+		<h2 th:text="#{detallesNota}">Detalles de la nota</h2>
 		<div class="panel panel-default">
 			<div class="panel-heading">DNI</div>
 			<div class="panel-body" th:text="${user.dni}">28276</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Nombre</div>
+			<div class="panel-heading" th:text="#{nombre}">Nombre</div>
 			<div class="panel-body" th:text="${user.name}">UO11111@uniovi.es</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Apellidos</div>
+			<div class="panel-heading" th:text="#{apellidos}">Apellidos</div>
 			<div class="panel-body" th:text="${user.lastName}">UO11111@uniovi.es</div>
 		</div>
 	</div>
