--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/edit.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/edit.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-  <h2>Editar Usuario</h2>
+  <h2 th:text="#{editarUsuario}">Editar Usuario</h2>
   <form class="form-horizontal" method="post" th:action="${'/user/edit/' + user.id}">
     <div class="form-group">
       <label class="control-label col-sm-2" for="description">DNI:</label>
@@ -18,20 +18,20 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Nombre:</label>
+      <label class="control-label col-sm-2" for="pwd" th:text="#{nombre}">Nombre:</label>
       <div class="col-sm-10">          
         <input th:value="${user.name}" type="text" class="form-control" name="name" placeholder="Entre 0 y 10" required="true" />
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Apellido:</label>
+      <label class="control-label col-sm-2" for="pwd" th:text="#{apellido}">Apellido:</label>
       <div class="col-sm-10">          
         <input th:value="${user.lastName}" type="text" class="form-control" name="lastName" placeholder="Entre 0 y 10" required="true" />
       </div>
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Modificar</button>
+        <button type="submit" class="btn btn-primary" th:text="#{modificar}">Modificar</button>
       </div>
     </div>
   </form>
