--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
@@ -5,10 +5,10 @@
 	<!-- Barra de Navegación superior -->
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<h2>Usuarios</h2>
-		<p>Los usuarios que actualmente figuran en el sistema son los
+		<h2 th:text="#{usuarios}">Usuarios</h2>
+		<p th:text="#{listadoUsuariosSubTexto}">Los usuarios que actualmente figuran en el sistema son los
 			siguientes:</p>
-		<button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
+		<button type="button" id="updateButton" class="btn btn-default" th:text="#{actualizar}">Actualizar</button>
 		<script>
 			$("#updateButton").click(function() {
 				$("#tableUsers").load('/user/list/update');
@@ -20,8 +20,8 @@
 				<thead>
 					<tr>
 						<th>DNI</th>
-						<th>Nombre</th>
-						<th>Apellidos</th>
+						<th th:text="#{nombre}">Nombre</th>
+						<th th:text="#{apellidos}">Apellidos</th>
 						<th class="col-md-1"></th>
 						<th class="col-md-1"></th>
 						<th class="col-md-1"></th>
@@ -34,9 +34,9 @@
 						<td th:text="${user.dni}">71888888X</td>
 						<td th:text="${user.name}">Nombre del alumno</td>
 						<td th:text="${user.lastName}">Apellidos del alumno</td>
-						<td><a th:href="${'/user/details/' + user.id}">detalles</a></td>
-						<td><a th:href="${'/user/edit/' + user.id}">modificar</a></td>
-						<td><a th:href="${'/user/delete/' + user.id}">eliminar</a></td>
+						<td><a th:href="${'/user/details/' + user.id}" th:text="#{detalles}">detalles</a></td>
+						<td><a th:href="${'/user/edit/' + user.id}" th:text="#{modificar}">modificar</a></td>
+						<td><a th:href="${'/user/delete/' + user.id}" th:text="#{eliminar}">eliminar</a></td>
 					</tr>
 				</tbody>
 			</table>
