--- a/sdi1920-605-lab-spring/src/main/resources/templates/mark/add.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/mark/add.html
@@ -8,7 +8,7 @@
 
 	<div class="container">
 		<h2 th:text="#{agregarNota}">Agregar Nota</h2>
-		<form class="form-horizontal" method="post" action="/mark/add">
+		<form class="form-horizontal" method="post" action="/mark/add" th:object="${mark}">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="user" th:text="#{alumno}">Alumno:</label>
 				<div class="col-sm-10"
@@ -24,14 +24,18 @@
 				<label class="control-label col-sm-2" for="description" th:text="#{descripcion}">Descripcion:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="description"
-						placeholder="Ejemplo Ejercicio 1" required="true" />
+						placeholder="Ejemplo Ejercicio 1" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('description')}"
+						th:errors="*{description}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="pwd" th:text="#{puntuacion}">Puntuacion:</label>
 				<div class="col-sm-10">
 					<input type="number" class="form-control" name="score"
-						placeholder="Enetre 0 y 10" required="true" />
+						placeholder="Enetre 0 y 10" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('score')}"
+						th:errors="*{score}">
 				</div>
 			</div>
 			<div class="form-group">
