--- a/sdi1920-605-lab-spring/src/main/resources/templates/teacher/add.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/teacher/add.html
@@ -3,37 +3,59 @@
 <head th:replace="fragments/head" />
 <body>
 
-<!-- Barra de Navegación superior -->
-<nav th:replace="fragments/nav" />
+	<!-- Barra de Navegación superior -->
+	<nav th:replace="fragments/nav" />
 
-<div class="container">
-  <h2 th:text="#{agregarProfesor}">Agregar Profesor</h2>
-  <form class="form-horizontal" method="post" action="/teacher/add">
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="description" th:text="#{nombre}">Nombre:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="name" placeholder="Ejemplo Ejercicio 1" required="true" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="description" th:text="#{apellidos}">Apellidos:</label>
-      <div class="col-sm-10">          
-        <input type="text" class="form-control" name="surname" placeholder="Enetre 0 y 10" required="true" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="description" th:text="#{categoria}">Categoria:</label>
-      <div class="col-sm-10">          
-        <input type="text" class="form-control" name="category" placeholder="Enetre 0 y 10" required="true" />
-      </div>
-    </div>
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary" th:text="#{enviar}">Enviar</button>
-      </div>
-    </div>
-  </form>
-</div>
-<footer th:replace="fragments/footer" />
+	<div class="container">
+		<h2 th:text="#{agregarProfesor}">Agregar Profesor</h2>
+		<form class="form-horizontal" method="post" action="/teacher/add"
+			th:object="${teacher}">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="description">DNI:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="dni"
+						placeholder="Ejemplo Ejercicio 1" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('dni')}"
+						th:errors="*{dni}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="description"
+					th:text="#{nombre}">Nombre:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="name"
+						placeholder="Ejemplo Ejercicio 1" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('name')}"
+						th:errors="*{name}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="description"
+					th:text="#{apellidos}">Apellidos:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="surname"
+						placeholder="Enetre 0 y 10" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('surname')}"
+						th:errors="*{surname}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="description"
+					th:text="#{categoria}">Categoria:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="category"
+						placeholder="Enetre 0 y 10" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('category')}"
+						th:errors="*{category}">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="submit" class="btn btn-primary" th:text="#{enviar}">Enviar</button>
+				</div>
+			</div>
+		</form>
+	</div>
+	<footer th:replace="fragments/footer" />
 </body>
 </html>
