SDI-SpringBoot-Sesión-4.3-Control de acceso por roles

--- a/sdi1920-605-lab-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/fragments/nav.html
@@ -10,28 +10,33 @@
 			<img src="/img/student-48.png" alt="logo" />
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav">
-			<li><a href="/" th:text="#{home.message}">Home</a></li>
-			<li id="marks-menu" class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" th:text="#{gestionNotas}">
-					Gestion de Notas <span class="caret"></span>
+			<ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
+				<li><a href="/" th:text="#{home.message}">Home</a></li>
+				<li id="marks-menu" class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" href="#" th:text="#{gestionNotas}">
+						Gestion de Notas <span class="caret"></span>
 				</a>
-				<ul class="dropdown-menu">
-					<li><a href="/mark/add" th:text="#{agregarNota}">Agregar Nota</a></li>
-					<li><a href="/mark/list">Ver Notas</a></li>
-				</ul>
-			</li>
-			<li id="users-menu" class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" th:text="#{gestionUsuarios}">
-					Gestion de Usuarios <span class="caret"></span>
+					<ul class="dropdown-menu">
+						<li sec:authorize="hasRole('ROLE_PROFESSOR')"><a
+							href="/mark/add" th:text="#{agregarNota}">Agregar Nota</a></li>
+						<li><a href="/mark/list">Ver Notas</a></li>
+					</ul></li>
+				<li id="users-menu" class="dropdown"
+					sec:authorize="hasRole('ROLE_ADMIN')"><a
+					class="dropdown-toggle" data-toggle="dropdown" href="#"
+					th:text="#{gestionUsuarios}"> Gestion de Usuarios <span
+						class="caret"></span>
 				</a>
-				<ul class="dropdown-menu">
-					<li><a href="/user/add" th:text="#{agregarUsuario}">Agregar usuario</a></li>
-					<li><a href="/user/list" th:text="#{verUsuarios}">Ver usuarios</a></li>
-				</ul>
-			</li>
-				<li class="active"><a href="/teacher/list" th:text="#{verProfesores}">Ver Profesores</a></li>
-				<li><a href="/teacher/add" th:text="#{agregarProfesor}">Agregar Profesor</a></li>
+					<ul class="dropdown-menu">
+						<li><a href="/user/add" th:text="#{agregarUsuario}">Agregar
+								usuario</a></li>
+						<li><a href="/user/list" th:text="#{verUsuarios}">Ver
+								usuarios</a></li>
+					</ul></li>
+				<li class="active"><a href="/teacher/list"
+					th:text="#{verProfesores}">Ver Profesores</a></li>
+				<li><a href="/teacher/add" th:text="#{agregarProfesor}">Agregar
+						Profesor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a id="btnLanguage" href="#"
@@ -57,12 +62,18 @@
 						</a></li>
 					</ul></li>
 
-				<li><a href="/signup" th:text="#{signup.message}"> <span
+				<li sec:authorize="!isAuthenticated()"><a href="/signup"
+					th:text="#{signup.message}"> <span
 						class="glyphicon glyphicon-user"></span> Registrate
 				</a></li>
-				<li><a href="/login" th:text="#{login.message}"> <span
+				<li sec:authorize="!isAuthenticated()"><a href="/login"
+					th:text="#{login.message}"> <span
 						class="glyphicon glyphicon-log-in"></span> Identificate
 				</a></li>
+				<li sec:authorize="isAuthenticated()"><a href="/logout"> <span
+						class="glyphicon glyphicon-log-out"></span> Desconectar
+				</a></li>
+
 			</ul>
 		</div>
 	</div>
