--- a/sdi1920-605-lab-spring/src/main/resources/templates/mark/list.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/mark/list.html
@@ -10,9 +10,10 @@
 
 	<div class="container">
 		<h2 th:text="#{notas}">Notas</h2>
-		<p th:text="#{listadoNotasSubTexto}">Las notas que actualmente figuran en el sistema son las
-			siguientes:</p>
-		<button type="button" id="updateButton" class="btn btn-default" th:text="#{actualizar}">Actualizar</button>
+		<p th:text="#{listadoNotasSubTexto}">Las notas que actualmente
+			figuran en el sistema son las siguientes:</p>
+		<button type="button" id="updateButton" class="btn btn-default"
+			th:text="#{actualizar}">Actualizar</button>
 		<script>
 			$("#updateButton").click(function() {
 				$("#tableMarks").load('/mark/list/update');
@@ -36,9 +37,58 @@
 						<td th:text="${mark.id}">1</td>
 						<td th:text="${mark.description}">Ejercicio 1</td>
 						<td th:text="${mark.score}">10</td>
-						<td><a th:href="${'/mark/details/' + mark.id}" th:text="#{detalles}">detalles</a></td>
-						<td><a th:href="${'/mark/edit/' + mark.id}" th:text="#{modificar}">modificar</a></td>
-						<td><a th:href="${'/mark/delete/' + mark.id}" th:text="#{eliminar}">eliminar</a></td>
+						<td><a th:href="${'/mark/details/' + mark.id}"
+							th:text="#{detalles}">detalles</a></td>
+						<td><a th:href="${'/mark/edit/' + mark.id}"
+							th:text="#{modificar}" sec:authorize="hasRole('ROLE_PROFESSOR')">modificar</a>
+							<div sec:authorize="hasRole('ROLE_STUDENT')">
+								<div th:if="${mark.resend}">
+									<button type="button" th:id="${'resendButton' + mark.id}"
+										class="btn btn-info">Reenviar</button>
+									<script th:inline="javascript">
+										/*<![CDATA[*/
+										$("#resendButton[[${mark.id}]]")
+												.click(
+														function() {
+															$
+																	.get(
+																			"/mark/[[${mark.id}]]/noresend",
+																			function(
+																					data) {
+																				$(
+																						"#tableMarks")
+																						.load(
+																								'/mark/list/update');
+																			});
+														});
+										/*]]>*/
+									</script>
+								</div>
+								<div th:unless="${mark.resend}">
+									<button type="button" th:id="${'noresendButton' + mark.id}"
+										class="btn btn-default">No reenviar</button>
+									<script th:inline="javascript">
+										/*<![CDATA[*/
+										$("#noresendButton[[${mark.id}]]")
+												.click(
+														function() {
+															$
+																	.get(
+																			"/mark/[[${mark.id}]]/resend",
+																			function(
+																					data) {
+																				$(
+																						"#tableMarks")
+																						.load(
+																								'/mark/list/update');
+																			});
+														});
+										/*]]>*/
+									</script>
+								</div>
+							</div></td>
+						<td><a th:href="${'/mark/delete/' + mark.id}"
+							th:text="#{eliminar}" sec:authorize="hasRole('ROLE_PROFESSOR')">eliminar</a></td>
 					</tr>
 				</tbody>
 			</table>
