--- a/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
@@ -6,9 +6,8 @@
 	<div class="container" style="text-align: center">
 		<h2 th:text="#{welcome.message}"></h2>
 		<h3 th:text="#{zonaPrivada}">Esta es una zona privada la web</h3>
-		<p th:text="#{usuarioAutenticadoComo}">
-			Usuario Autenticado como : <b th:inline="text">
-				[[${#httpServletRequest.remoteUser}]] </b>
+		<p>
+			Usuario Autenticado como : <span th:inline="text" sec:authentication="principal.username"></span>
 		</p>
 	</div>
 	<p th:text="#{notas}">Notas del usuario</p>
