--- a/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/users/home.html
@@ -7,34 +7,11 @@
 		<h2 th:text="#{welcome.message}"></h2>
 		<h3 th:text="#{zonaPrivada}">Esta es una zona privada la web</h3>
 		<p>
-			Usuario Autenticado como : <span th:inline="text" sec:authentication="principal.username"></span>
+			Usuario Autenticado como : <span th:inline="text"
+				sec:authentication="principal.username"></span>
 		</p>
 	</div>
-	<p th:text="#{notas}">Notas del usuario</p>
-	<div class="table-responsive">
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th class="col-md-1">id</th>
-					<th th:text="#{notas}">Descripción</th>
-					<th th:text="#{puntuacion}">Puntuación</th>
-					<th class="col-md-1"></th>
-					<th class="col-md-1"></th>
-					<th class="col-md-1"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="mark : ${markList}">
-					<td th:text="${mark.id}">1</td>
-					<td th:text="${mark.description}">Ejercicio 1</td>
-					<td th:text="${mark.score}">10</td>
-					<td><a th:href="${'/mark/details/' + mark.id}" th:text="#{detalles}">detalles</a></td>
-					<td><a th:href="${'/mark/edit/' + mark.id}" th:text="#{modificar}">modificar</a></td>
-					<td><a th:href="${'/mark/delete/' + mark.id}" th:text="#{eliminar}">eliminar</a></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+	<div th:replace="fragments/marksList" />
 
 	<footer th:replace="fragments/footer" />
 </body>
