--- a/sdi1920-605-lab-spring/src/main/resources/templates/users/login.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/users/login.html
@@ -5,7 +5,7 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Identificate</h2>
-		<form class="form-horizontal" method="post" action="/login">
+		<form class="form-horizontal" method="post" action="/home">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="username">DNI:</label>
 				<div class="col-sm-10">
