--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
@@ -8,6 +8,13 @@
 		<h2 th:text="#{usuarios}">Usuarios</h2>
 		<p th:text="#{listadoUsuariosSubTexto}">Los usuarios que actualmente figuran en el sistema son los
 			siguientes:</p>
+		<form class="navbar-form" action="/user/list">
+			<div class="form-group">
+				<input name="searchText" type="text" class="form-control" size="50"
+					placeholder="Buscar por nombre o apellidos de usuario">
+			</div>
+			<button type="submit" class="btn btn-default">Buscar</button>
+		</form>
 		<button type="button" id="updateButton" class="btn btn-default" th:text="#{actualizar}">Actualizar</button>
 		<script>
 			$("#updateButton").click(function() {
