--- a/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
+++ b/sdi1920-605-lab-spring/src/main/resources/templates/user/list.html
@@ -6,8 +6,8 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2 th:text="#{usuarios}">Usuarios</h2>
-		<p th:text="#{listadoUsuariosSubTexto}">Los usuarios que actualmente figuran en el sistema son los
-			siguientes:</p>
+		<p th:text="#{listadoUsuariosSubTexto}">Los usuarios que
+			actualmente figuran en el sistema son los siguientes:</p>
 		<form class="navbar-form" action="/user/list">
 			<div class="form-group">
 				<input name="searchText" type="text" class="form-control" size="50"
@@ -15,12 +15,20 @@
 			</div>
 			<button type="submit" class="btn btn-default">Buscar</button>
 		</form>
-		<button type="button" id="updateButton" class="btn btn-default" th:text="#{actualizar}">Actualizar</button>
-		<script>
-			$("#updateButton").click(function() {
-				$("#tableUsers").load('/user/list/update');
-			});
-		</script>
+		<button type="button" id="updateButton" class="btn btn-default"
+			th:text="#{actualizar}">Actualizar</button>
+		<script th:inline="javascript">
+ /*<![CDATA[*/
+	  $( "#updateButton" ).click(function() {
+ var numberPage = [[${param.page}]];
+ var urlUpdate = '/user/list/update';
+ if (numberPage != null ){
+ urlUpdate += "?page="+numberPage[0];
+ }
+ $("#tableUsers").load(urlUpdate);
+ });
+ /*]]>*/
+ </script>
 		<div class="table-responsive">
 			<table class="table table-hover" th:fragment="tableUsers"
 				id="tableUsers">
@@ -41,13 +49,17 @@
 						<td th:text="${user.dni}">71888888X</td>
 						<td th:text="${user.name}">Nombre del alumno</td>
 						<td th:text="${user.lastName}">Apellidos del alumno</td>
-						<td><a th:href="${'/user/details/' + user.id}" th:text="#{detalles}">detalles</a></td>
-						<td><a th:href="${'/user/edit/' + user.id}" th:text="#{modificar}">modificar</a></td>
-						<td><a th:href="${'/user/delete/' + user.id}" th:text="#{eliminar}">eliminar</a></td>
+						<td><a th:href="${'/user/details/' + user.id}"
+							th:text="#{detalles}">detalles</a></td>
+						<td><a th:href="${'/user/edit/' + user.id}"
+							th:text="#{modificar}">modificar</a></td>
+						<td><a th:href="${'/user/delete/' + user.id}"
+							th:text="#{eliminar}">eliminar</a></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+		<footer th:replace="fragments/pagination" />
 	</div>
 	<footer th:replace="fragments/footer" />
 </body>
